Fix double scrollbar on low height viewports.

--- a/tttod_frontend/styles/app.scss
+++ b/tttod_frontend/styles/app.scss
@@ -56,7 +56,7 @@ body {
     left: 0;
     right: 0;
     min-height: 100%;
-    overflow-y: auto;
+    overflow-y: hidden;
 }
 
 .logo {
